[package]
name = "silos"
version = "0.1.1"
edition = "2021"
description="YAML/JSON conversion cli tool"
authors=["juanmilkah <juanmilkah@gmail.com>"]
license="GPL-3.0"
repository="https://github.com/juanmilkah/silos"

[[bin]]
name ="silos"
path ="src/main.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
structopt = "0.3.26"
tempfile = "3.14.0"
